# os-usage

./: .gitignore  collect_traces.py  pyproject.toml  server.py  train_stages.py  train_traces.py  train_traces_multi.py
traces/: traces.json  traces_expanded.json
trainer/: grpo.py  injection.py  utils.py
web-playground/: Cargo.toml  Dioxus.toml  TODO.md  pytest.ini
web-playground/.cargo/: config.toml
web-playground/src/: landing.rs  level_select.rs  main.rs
web-playground/src/canvas/: element.rs  mod.rs  playground.rs
web-playground/src/levels/: custom_select.rs  ground_truth.rs  level1.rs  level10.rs  level11.rs  level12.rs  level13.rs  level14.rs  level15.rs  level16.rs  level17.rs  level18.rs  level19.rs  level2.rs  level20.rs  level21.rs  level22.rs  level23.rs  level24.rs  level25.rs  level26.rs  level27.rs  level3.rs  level4.rs  level5.rs  level6.rs  level7.rs  level8.rs  level9.rs  level_scroll.rs  mod.rs
web-playground/src/pool/: builtins.rs  kind.rs  mod.rs  snippet.rs
web-playground/src/primitives/: angle.rs  animation.rs  bounded.rs  mod.rs  opacity.rs  position.rs  scale.rs
web-playground/src/test_routes/: button.rs  drag.rs  dropdown.rs  mod.rs  reorder.rs  text_input.rs  toggle.rs
web-playground/src/transform/: mod.rs  placed.rs  sampler.rs
web-playground/src/ui_node/: builder.rs  check.rs  mod.rs  prism.rs  resolve.rs
web-playground/tests/: conftest.py  test_click.py  test_drag.py  test_reorder.py  test_select.py  test_toggle.py  test_type.py
